<!--
  ~ Copyright © 2017-2020  Kynetics  LLC
  ~
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the Eclipse Public License v1.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.eclipse.org/legal/epl-v10.html
  -->

<resources>
    <string name="app_name">Update Factory service</string>
    <string name="invalid_update">Invalid Update</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="update_download_title">New update available</string>
    <string name="update_download_content">New update is available to download.\nUpdates include new features, improvements and bug fixes.\nClick OK to download the update now.</string>
    <string name="update_started_title">Update Authorization</string>
    <string name="update_started_content">The upgrade is ready, click OK to upgrade now.\nThe device will be restarted during the upgrade process.</string>
    <string name="yes">yes</string>
    <string name="no">no</string>



    <!-- KEY TO SHARED PREFERECE -->
    <string name="shared_preferences_is_enable_key" translatable="false">IS_ACTIVE_KEY</string>
    <string name="shared_preferences_is_enable_title">Enable</string>
    <string name="shared_preferences_is_enable_summary">Enable/disable update system</string>
    <string name="shared_preferences_server_url_key" translatable="false">URL_KEY</string>
    <string name="shared_preferences_server_url_title" >UF Server url</string>
    <string name="shared_preferences_api_mode_key" translatable="false">API_MODE_KEY</string>
    <string name="shared_preferences_api_mode_title" >Api mode</string>
    <string name="shared_preferences_tenant_key" translatable="false">TENANT_KEY</string>
    <string name="shared_preferences_tenant_title" >Tenant</string>
    <string name="shared_preferences_controller_id_key" translatable="false">CONTROLLER_ID_KEY</string>
    <string name="shared_preferences_controller_id_title">Controller id</string>
    <string name="shared_preferences_retry_delay_key" translatable="false">RETRY_DELAY_KEY</string>
    <string name="shared_preferences_retry_delay_title" >Retry frequency on error</string>
    <string name="shared_preferences_current_state_key" translatable="false">CURRENT_STATE_KEY</string>
    <string name="shared_preferences_current_state_title" >Current state</string>
    <string name="shared_preferences_file" translatable="false">UF_SHARED_FILE</string>
    <string name="shared_preferences_target_token_key" translatable="false">TARGET_TOKEN_KEY</string>
    <string name="shared_preferences_gateway_token_key" translatable="false">GATEWAY_TOKEN_KEY</string>
    <string name="shared_preferences_args_key" translatable="false">UF_ARGS_KEY</string>
    <string name="shared_preferences_is_update_factory_server_type_key" translatable="false">IS_UF_SERVER_TYPE_KEY</string>
    <string name="shared_preferences_target_token_received_from_server_key" translatable="false">TARGET_TOKEN_SERVER_KEY</string>
    <string name="shared_preferences_target_token_received_from_server_title" translatable="false">Target token received from server</string>


    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="stop_service_dialog_message">Are you sure to disable the update system?</string>
    <string name="stop_service_dialog_title">Stop Update service</string>
    <string name="retry_time_default">120000</string>
    <string name="shared_preferences_target_token_title">Target token</string>
    <string name="shared_preferences_gateway_token_title">Gateway token</string>
    <string name="update_factory_notification_title">Update Factory</string>
    <string name="update_factory_label">Update Factory</string>
    <string name="shared_preferences_system_update_type_key">SYSTEM_UPDATE_TYPE_KEY</string>
    <string name="shared_preferences_system_update_type_title">System Update Type</string>

</resources>
