<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/shared_preferences_is_enable_key"
        android:summary="@string/shared_preferences_is_enable_summary"
        android:title="@string/shared_preferences_is_enable_title" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:inputType="textCapWords"
        android:key="@string/shared_preferences_server_url_key"
        android:title="@string/shared_preferences_server_url_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <EditTextPreference
        android:inputType="textCapWords"
        android:key="@string/shared_preferences_tenant_key"
        android:title="@string/shared_preferences_tenant_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <EditTextPreference
        android:inputType="textCapWords"
        android:key="@string/shared_preferences_controller_id_key"
        android:title="@string/shared_preferences_controller_id_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <EditTextPreference
        android:inputType="textCapWords"
        android:key="@string/shared_preferences_target_token_key"
        android:title="@string/shared_preferences_target_token_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <EditTextPreference
        android:inputType="textCapWords"
        android:key="@string/shared_preferences_gateway_token_key"
        android:title="@string/shared_preferences_gateway_token_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/shared_preferences_api_mode_key"
        android:title="@string/shared_preferences_api_mode_title" />

    <ListPreference
        android:defaultValue="@string/retry_time_default"
        android:entries="@array/retry_time_entries_name"
        android:entryValues="@array/retry_time_entries_value"
        android:key="@string/shared_preferences_retry_delay_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/shared_preferences_retry_delay_title" />

    <Preference
        android:inputType="textCapWords"
        android:key="@string/shared_preferences_current_state_key"
        android:title="@string/shared_preferences_current_state_title"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

</PreferenceScreen>
